<resources>
    <string name="app_name">Have</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome,"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="or_sign_in_using">Or sign in using:</string>
    <string name="sign_up">Sign Up</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="have_logo">HAVE Logo</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name</string>
    <string name="birthdate">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="overview_activity">Overview Add Activity</string>
    <string name="add_your_activity">Add Your Activity</string>
    <string name="overview_add_activity">Stay on top of your tasks, projects, and goals with a few easy steps.\nStart adding your activities now and take control of your time like never before!</string>
    <string name="add">Add</string>
    <string name="add_activity">Add Activity</string>
    <string name="time">Time</string>
    <string name="activity_name">Activity Name</string>
    <string name="delete">Delete</string>
    <string name="select_date">Select Date</string>
    <string name="email">Email</string>
    <string name="title_home">Home</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_activity">Activity</string>
    <string name="title_calorie">Calorie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="add_food">Add food</string>
    <string name="see_details">See Details</string>
    <string name="targets">Targets :</string>
    <string name="your_calories">Your Calories</string>
    <string name="calorie">Calorie</string>
    <string name="exercise_recommendation">Exercise Recommendation</string>
    <string name="food_recommendation">Food Recommendation</string>
    <string name="sleep_analysis">Sleep Analysis</string>
    <string name="currentdate">CurrentDate</string>
    <string name="quality">Quality(%)</string>
    <string name="percentage">Percentage</string>
    <string name="sleep_hour">Sleep Hour</string>
    <string name="sleep_duration">Sleep Duration</string>
    <string name="upcoming_activity">Upcoming Activity</string>
    <string name="hour">Hour</string>
    <string name="food_name">Food Name</string>
    <string name="top_3_big_calories">Top 3 Big Calories</string>
    <string name="be_aware_of_this_food">Be aware of this food...</string>
    <string name="tv_landing2">Activity Management</string>
    <string name="desc_landing2">Often overwhelmed by work? We will help organize and remember your activities.</string>
    <string name="tv_landing3">Sleep Management</string>
    <string name="desc_landing3">Often sleepy in the morning? We are ready to improve your sleep patterns</string>
    <string name="tv_landing4">Calorie Management</string>
    <string name="desc_landing4">Often not confident? Arrange your diet with us.</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tv_food_name">Food Name</string>
    <string name="tv_calories_kcal">Calories (kcal)</string>
    <string name="next">Next</string>
    <string name="sign_in_to_your_account">Sign In to Your Account</string>
    <string name="let_s">Let\'s</string>
    <string name="powered_by">Powered by</string>
    <string name="_1500_kcal">1500 kcal</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="none_value">--</string>
    <string name="kcal">kCal</string>
    <string name="calories_nnow">Calories\nNow</string>
    <string name="non_value_percentage">--%</string>
    <string name="sleep_nquality">Sleep\nQuality</string>
    <string name="health_overview">Health Overview</string>
    <string name="sleep_statistic">Sleep Statistic</string>
    <string name="your_activity">Your Activity</string>
    <string name="go_to_work">Go to Work</string>
    <string name="_9_40_a_m">9:40 a.m.</string>
    <string name="calories">calories</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="bedtime">Bedtime</string>
    <string name="today">Today</string>
    <string name="none_value_sleep">----</string>
    <string name="wakeup">Wakeup</string>
    <string name="tomorrow">Tomorrow</string>
</resources>