<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_landing_scene"
    tools:context=".ui.LandingActivity">

    <ImageView
        android:id="@+id/img_landing1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_landing2"/>

    <TextView
        android:id="@+id/tv_landing1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_landing2"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc_landing1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_landing2"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/img_landing2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_landing3"/>

    <TextView
        android:id="@+id/tv_landing2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_landing3"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc_landing2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_landing3"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/img_landing3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_landing4" />

    <TextView
        android:id="@+id/tv_landing3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_landing4"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/desc_landing3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_landing4"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/next"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/signin"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sign_up"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>