<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.have.ui.menu.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sleep"
        android:name="com.capstone.have.ui.menu.sleep.SleepFragment"
        android:label="@string/title_sleep"
        tools:layout="@layout/fragment_sleep" />

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.capstone.have.ui.menu.activity.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/navigation_calorie"
        android:name="com.capstone.have.ui.menu.calorie.CalorieFragment"
        android:label="@string/title_calorie"
        tools:layout="@layout/fragment_calorie" />
    <fragment
        android:id="@+id/healthOverviewFragment"
        android:name="com.capstone.have.ui.menu.home.HealthOverviewFragment"
        android:label="fragment_health_overview"
        tools:layout="@layout/fragment_health_overview" />
</navigation>