<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="194dp"
        android:contentDescription="@string/have_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/usernameTextView"
        style="@style/CustomTextView.Textfield"
        android:alpha="0"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
        tools:alpha="100" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_signin_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_marginTop="30dp"
        android:alpha="0"
        android:text="@string/password"
        style="@style/CustomTextView.Textfield"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextLayout"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:alpha="0"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        tools:alpha="100" >

        <com.capstone.have.iu.PasswordEditText
            android:id="@+id/ed_signin_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/noAccountTextView"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"
        android:text="@string/dont_have_account"
        android:textSize="17sp"
        style="@style/CustomTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <TextView
        android:id="@+id/signupTextView"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:layout_marginTop="21dp"
        android:text="@string/sign_up"
        android:textSize="17sp"
        style="@style/CustomTextView"
        app:layout_constraintStart_toEndOf="@id/noAccountTextView"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="161dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_shape"
        android:text="@string/signin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noAccountTextView" />

    <TextView
        android:id="@+id/orSignInUsingTextView"
        android:layout_marginTop="40dp"
        android:text="@string/or_sign_in_using"
        android:textSize="17sp"
        style="@style/CustomTextView"
        app:layout_constraintTop_toBottomOf="@+id/signinButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageView
        android:id="@+id/googleSignInButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_google"
        android:contentDescription="@string/google_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/orSignInUsingTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>