<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.calorie.CalorieFragment">

    <TextView
        android:id="@+id/header_sleep"
        android:text="@string/calorie"
        style="@style/CustomTextView"
        android:textStyle="bold"
        android:textSize="33sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"/>

    <TextView
        android:id="@+id/header_bigCalories"
        android:text="@string/your_calories"
        style="@style/CustomTextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_sleep"
        android:layout_marginTop="33dp"
        android:layout_marginStart="21dp"/>

    <TextView
        android:id="@+id/textTarget"
        android:text="@string/targets"
        style="@style/CustomTextView"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/header_bigCalories"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="21dp"/>

    <TextView
        android:id="@+id/textCalorie"
        android:text="Jumlah Kalori"
        style="@style/CustomTextView"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/textTarget"
        app:layout_constraintTop_toBottomOf="@id/header_bigCalories"/>

    <Button
        android:id="@+id/buttonSeeDetails"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/btn_shape"
        android:text="@string/see_details"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/calorie_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTarget" />

    <FrameLayout
        android:id="@+id/top_calorie_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/calorie_chart"/>

    <FrameLayout
        android:id="@+id/food_rec_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/top_calorie_container"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_margin="22dp"
        android:contentDescription="@string/add_food"
        android:text="@string/add_food"
        android:textSize="19sp"
        app:icon="@drawable/ic_camera_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>