<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.menu.home.HomeFragment">

    <TextView
        android:id="@+id/header_greetings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/green"
        android:textSize="23sp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="21dp"/>

    <TextView
        android:id="@+id/tv_Name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/green"
        android:textSize="26sp"
        android:textStyle="bold"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_greetings"
        android:layout_marginStart="21dp"/>

    <ImageView
        android:id="@+id/img_User"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="21dp"
        android:clickable="true"
        android:contentDescription="@string/profile"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_profile" />

    <FrameLayout
        android:id="@+id/upcomingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_greetings"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/user_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upcomingActivity"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
